fix skills button alignment and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -102,10 +102,16 @@ button:hover{
   background-position: center center;
   background-size: cover;
   padding: 5px;
+  margin: 5px;
 }
 
 .pc-img-1{
-  background-color: #caf0f8;
+  background-image: url('../src/img/decidr.png');
+  /* background-color: #caf0f8; */
+  /* width: 300px; */
+  /* aspect-ratio: 3/2;
+  background-image: url('../src/img/decidr.png');
+  background-size: cover;  */
 }
 .pc-img-2{
   background-color: #8eecf5;
@@ -121,4 +127,10 @@ button:hover{
 }
 .pc-img-6{
   background-color: #fae0e4;
+}
+.project-card{
+  width: 300px;
+  aspect-ratio: 3/2;
+  /* background-image: url('../src/img/decidr.png');
+  background-size: cover;  */
 }
